Remove unnecessary XML modifications